forgot to stage everything :( also bumped the version